--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Hahmlet:wght@300&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
 
         * {
-            font-family: 'Hahmlet', serif;
+            font-family: 'Gowun Dodum', sans-serif;
         }
 
         .mytitle {
@@ -30,7 +30,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-
 
             background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
             background-position: center;
@@ -59,16 +58,19 @@
             color: gray;
         }
 
-        .mycard {
+        .mycards {
             width: 1200px;
             margin: 20px auto 20px auto;
         }
+
         .mypost {
             width: 500px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
+
             box-shadow: 0px 0px 3px 0px gray;
         }
+
         .mybtn {
             display: flex;
             flex-direction: row;
@@ -77,9 +79,11 @@
 
             margin-top: 20px;
         }
+
         .mybtn > button {
             margin-right: 10px;
         }
+        
     </style>
 </head>
 
@@ -102,91 +106,58 @@
             <button type="button" class="btn btn-outline-dark">닫기</button>
         </div>
     </div>
-    <div class="mycard">
+    <div class="mycards">
         <div class="row row-cols-1 row-cols-md-4 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">영화 제목이 들어갑니다.</h5>
                         <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
                         <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
-
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">영화 제목이 들어갑니다.</h5>
                         <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
                         <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
-
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">영화 제목이 들어갑니다.</h5>
                         <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
                         <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
-
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg">
+                    <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">영화 제목이 들어갑니다.</h5>
                         <p class="card-text">여기에 코멘트가 들어갑니다.</p>
                         <p>⭐⭐⭐</p>
                         <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
-                    </div>
-                </div>
-
-                <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
 </body>
 
 </html>
